XMLExper/m12/m12_432_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual tinyxml2::XMLNode* tinyxml2::XMLText::ShallowClone(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:1276:56: error: lvalue required as left operand of assignment
 1276 |         /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(doc) = _document;
      |                                                        ^~~~~~~~~
diff: tinyxml2.S: No such file or directory
